# mg_proxy_test

./: CMakeLists.txt  README.md  idle_handler.cpp  main.cpp  main_window.cpp  main_window.h  main_window.ui  options_dialog.cpp  options_dialog.h  options_dialog.ui
